[package]
name = "libcryptocam"
version = "0.1.3"
authors = ["Thomas Nibler <dev@tnibler.de>"]
edition = "2018"

[dependencies]
age = "0.5.1"
secrecy = "0.7"

bytes = "0.4"

serde = "1.0"
serde_json = "1.0"
rust-ini = "0.17.0"

base64 = "0.13"
sha2 = "0.9"

ac-ffmpeg = "0.18.1"

anyhow = "1.0"
thiserror = "1.0"

log = { version = "0.4" }

dialoguer = "0.8.0"
pinentry = "0.3"

qrcode = "0.12"
urlencoding = "1.1.1"
